namespace bridge
{
    public class LongSpell : AbstractSpell
    {

        public LongSpell(string spellText = "Abra kadabra!")
        {
            SpellText = spellText;
        }
    }
}