namespace bridge
{
    public enum Position
    {
        Right,
        Left
    }
}