
namespace bridge
{
    public class ShortSpell : AbstractSpell
    {
        public ShortSpell(string spellText = "Hokus Pokus Widikus Wingardium Leviosa")
        {
            SpellText = spellText;
        }
    }
}