namespace bridge
{
    public enum SwordType
    {
        Long,
        Short
    }
}